A few tweaks to fix layout problems in different browsers.

--- a/trunk/PfamWeb/root/early_static/css/family.css
+++ b/trunk/PfamWeb/root/early_static/css/family.css
@@ -5,7 +5,7 @@
    Stylesheet for the items that are specific to the tab layout for
    the Pfam family pages.
 
-   $Id: family.css,v 1.2 2006-04-25 16:23:52 jt6 Exp $
+   $Id: family.css,v 1.3 2006-04-26 10:41:41 jt6 Exp $
 */   
 
 /* ======================================== */
@@ -47,13 +47,6 @@
 #sidebar {
     border-bottom-color: #4577a5;
 }
-
-/*
-#sidebar li {
-  border: 1px solid #c2d2e1;
-  border-right: 1px solid #4577a5;
-}
-*/
 
 #sidebar li a {
   color: #074987;
